# keypilot

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  PLAN.md  README.md  README.zh-CN.md  feature_list.json  init.sh  progress.md  session-handoff.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: pricing.json
src-tauri/data/catalog/: ai21.toml  anthropic.toml  cohere.toml  deepseek.toml  fireworks.toml  github.toml  groq.toml  kimi.toml  mimo.toml  minimax-cn.toml  minimax-en.toml  mistral.toml  openai.toml  openrouter.toml  perplexity.toml  qwen.toml  siliconflow.toml  stepfun.toml  together.toml  volcengine.toml  zhipu.toml
src-tauri/data/migrations/: v3_to_v4.sql  v4_to_v5.sql  v5_to_v6.sql  v8_to_v9.sql
src-tauri/icons/: icon.icns
src-tauri/installer-hooks/: keypilot.nsh
src-tauri/src/: catalog.rs  database.rs  error.rs  lib.rs  main.rs  store.rs  timeutil.rs  tray.rs  types.rs
src-tauri/src/actions/: category.rs  mod.rs  provider.rs  quota.rs  system.rs  token_usage.rs
src-tauri/src/commands/: action.rs  mod.rs  provider.rs  quota.rs  token_usage.rs  tray.rs
src-tauri/src/provider/: adapter.rs  agent_source.rs  anthropic.rs  deepseek.rs  github.rs  mod.rs  openai.rs  postgres.rs  registry.rs
src-tauri/src/services/: agent_parser.rs  agent_parser_claude_code.rs  agent_parser_codex.rs  agent_parser_opencode.rs  auto_import.rs  category.rs  currency.rs  deepseek_balance_history.rs  incremental_import.rs  mod.rs  opencode_go_limits.rs  pricing.rs  provider.rs  (+1 more)
src-tauri/tests/: ipc_e2e.rs
(+151 files in other folders)
