[package]
name = "keypilot"
version = "0.1.0"
edition = "2021"

[lib]
name = "keypilot_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tokio = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
serde = "1"
serde_json = "1"
thiserror = "1"
chrono = "0.4"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
dirs = "5"
sha2 = "0.10"
base64 = "0.22"
notify = "8"
notify-debouncer-full = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
